--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "vite-trello-web-base-project",
   "private": true,
   "version": "0.0.0",
@@ -16,6 +15,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
